--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -524,6 +524,7 @@ body:not(.page__home)
             margin-bottom: $spacing-2
         .description
             @include h6
+            margin-left: 0 !important
         ul.links
             display: block
             @include in-page-with-or-without-sidebar
