--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -434,6 +434,13 @@ body:not(.page__home)
                     .organization
                         width: columns(5)
 
+.organizations.grid:not(.with-summaries)
+    @include in-page-with-sidebar
+        @include grid(5, xl)
+    .organization
+        .media--logo img
+            mix-blend-mode: multiply
+
 // chapters
 .block-chapter
     .chapter
