--- a/layouts/partials/pages/partials/layouts/large/large.html
+++ b/layouts/partials/pages/partials/layouts/large/large.html
@@ -1,40 +1,52 @@
 {{ $options := .options }}
-{{ $heading_level := .heading_level | default 3 }}
 {{ $heading_tag := partial "GetHeadingTag" (dict 
-        "level" $heading_level
-        "attributes" "class='page-title'"
+  "level" ( .heading_level | default 3 )
+  "attributes" "class='page-title'"
 )}}
-<div class="large">
+
+<ul class="pages">
   {{ range .pages }}
     {{ $page := site.GetPage .path }}
     {{ with $page }}
-      <article class="page">
-        {{ $heading_tag.open }}
-          <a href="{{- .Permalink -}}">
-            {{- partial "PrepareHTML" .Title -}}
-          </a>
-        {{ $heading_tag.close }}
-        <div class="page-material">
-          <div class="page-content">
-            {{ if and $options.summary .Params.summary }}
-              {{ partial "GetRichSummary" ( dict 
-                "summary" .Params.summary
-                "kind" "pages"
-              )}}
-            {{ end }}
-            <p class="more meta" aria-hidden="true">{{- i18n "commons.more" -}}</p>
-          </div>
-  
-          {{- if and $options.image .Params.image -}}
-            <div class="media">
-              {{- partial "commons/image.html" (dict
-                  "image"    .Params.image
-                  "sizes"    site.Params.image_sizes.blocks.pages.large
-                ) -}}
+      <li>
+        <article class="page">
+          {{ $heading_tag.open }}
+            <a href="{{- .Permalink -}}">
+              {{- partial "PrepareHTML" .Title -}}
+            </a>
+          {{ $heading_tag.close }}
+
+          {{- partial "pages/partials/page/hook-after-title.html" . -}}
+
+          <div class="page-material">
+            <div class="page-content">
+              {{ if and $options.summary .Params.summary }}
+                {{ partial "GetRichSummary" ( dict 
+                  "summary" .Params.summary
+                  "kind" "pages"
+                )}}
+              {{ end }}
+
+              {{ if and $options.categories .Params.taxonomies }}
+                {{ partial "commons/categories" ( dict
+                  "context" .
+                  "kind" "page"
+                )}}
+              {{ end }}
+
+              <p class="more meta" aria-hidden="true">{{- i18n "commons.more" -}}</p>
             </div>
-          {{- end -}}
-        </div>
-      </article>
+
+            {{- if $options.image -}}
+              {{ partial "pages/partials/page/media.html" (dict 
+                "image" .Params.image
+                "layout" "large"
+              )}}
+            {{- end -}}
+          
+          </div>
+        </article>
+      </li>
     {{- end -}}
   {{ end }}
-</div>
+    </ul>
