fixed pages lists block

--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -115,7 +115,7 @@ body:not(.page__home)
                             font-family: $font-serif
                     + .title-only
                         justify-content: center
-                        margin-top: $spacing-4
+                        margin-top: $spacing-4 !important
                         li
                             a
                                 @extend .button
