--- a/assets/sass/cids-theme/_configuration.sass
+++ b/assets/sass/cids-theme/_configuration.sass
@@ -123,6 +123,9 @@ $btn-border-radius: pxToRem(3)
 // $block-space-y: space(28)
 $block-space-y-desktop: space(28) !default
 
+// pages
+$block-pages-card-page-background: $color-background-alt
+
 // call to action / cta
 $block-call-to-action-accent-button-hover-background: rgba(255,255,255, 0.8)
 $block-call-to-action-accent-button-hover-border: 1px solid transparent
