--- a/layouts/partials/pages/partials/layouts/grid/grid.html
+++ b/layouts/partials/pages/partials/layouts/grid/grid.html
@@ -1,10 +1,10 @@
 {{ $options := .options }}
-{{ $heading_level := .heading_level | default 3 }}
 {{ $heading_tag := partial "GetHeadingTag" (dict 
-        "level" $heading_level
-        "attributes" "class='page-title'"
+  "level" ( .heading_level | default 3 )
+  "attributes" "class='page-title'"
 )}}
-<div class="grid">
+
+<ul class="pages">
   {{ range .pages }}
   {{/*  Check if . is a map or page url, necessary when pages/grid is called outside block context */}}
     {{- $page := false -}}
@@ -17,25 +17,42 @@
     {{ $page := site.GetPage $page }}
 
     {{ with $page }}
-      <article>
-        {{ $heading_tag.open }}
-          <a href="{{- .Permalink -}}">
-            {{- partial "PrepareHTML" .Title -}}
-          </a>
-        {{ $heading_tag.close }}
-        {{ if and $options.summary .Params.summary }}
-          {{ partial "GetRichSummary" ( dict 
-            "summary" .Params.summary
-            "kind" "pages"
-          )}}
-        {{ end }}
-        {{ if $options.summary }}
-          <p class="more meta" aria-hidden="true">{{- i18n "commons.more" -}}</p>
-        {{ end }}
-        {{ if $options.image }}
-          {{- partial "pages/partials/page/page-media.html" . -}}
-        {{ end }}
-      </article>
+      <li>
+        <article class="page">
+          {{ $heading_tag.open }}
+            <a href="{{- .Permalink -}}">
+              {{- partial "PrepareHTML" .Title -}}
+            </a>
+          {{ $heading_tag.close }}
+
+          {{- partial "pages/partials/page/hook-after-title.html" . -}}
+
+          {{ if and $options.summary .Params.summary }}
+            {{ partial "GetRichSummary" ( dict 
+              "summary" .Params.summary
+              "kind" "pages"
+            )}}
+          {{ end }}
+
+          {{ if and $options.categories .Params.taxonomies }}
+            {{ partial "commons/categories" ( dict
+              "context" .
+              "kind" "page"
+            )}}
+          {{ end }}
+
+          {{ if $options.summary }}
+            <p class="more meta" aria-hidden="true">{{- i18n "commons.more" -}}</p>
+          {{ end }}
+
+          {{ if $options.image }}
+            {{ partial "pages/partials/page/media.html" (dict 
+              "image" .Params.image
+              "layout" "grid"
+            )}}
+          {{ end }}
+        </article>
+      </li>
     {{- end -}}
   {{ end }}
-</div>
+</ul>
