--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -646,7 +646,7 @@ body:not(.page__home)
         &--grid
             @include media-breakpoint-up(desktop)
                 grid-gap: $spacing-5 var(--grid-gutter)
-                .project
+                > li
                     padding-bottom: space(10)
                     &:nth-child(odd)
                         &::after
