--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -417,7 +417,7 @@ body:not(.page__home)
     + .block-persons
         border-top: 1px solid $color-border
         padding-top: var(--block-space-y)
-    div.persons
+    .persons
         .person-name
                 font-family: $font-serif
         @include in-page-without-sidebar
