--- a/assets/sass/cids-theme/styles/events.sass
+++ b/assets/sass/cids-theme/styles/events.sass
@@ -56,9 +56,19 @@ body.events__page
             font-family: $h1-font-family
             font-weight: bold
 
-    @include media-breakpoint-up(md)
-        .events-date,
-        .events-date--sticky
+    .events-date,
+    .events-date--sticky
+        @include media-breakpoint-up(md)
             .events-date-title
                 span
                     padding-top: $spacing-3
+
+        @include media-breakpoint-down(md)
+            .events-scheduled
+                > li
+                    margin-top: 0
+                .event
+                    .event-hours
+                        margin-top: 0
+                    .media
+                        margin-bottom: $spacing-2
