--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -461,7 +461,7 @@ body:not(.page__home)
                     .organization
                         width: columns(5)
 
-.organizations.grid:not(.with-summaries)
+.organizations--grid:not(.with-summaries)
     @include in-page-with-sidebar
         @include grid(5, xl)
     .organization
