--- a/assets/sass/cids-theme/styles/colors.sass
+++ b/assets/sass/cids-theme/styles/colors.sass
@@ -39,9 +39,9 @@ body
         .block-pages--large .page
             &:hover
                 .more
-                    --btn-background: var(--color-text)
-                    --btn-color: var(--color-accent)
-                    --btn-border: 1px solid var(--color-text)
+                    --btn-background: var(--color-text) !important
+                    --btn-color: var(--color-accent) !important
+                    --btn-border: 1px solid var(--color-text) !important
         
         .block-pages--large .page
             @include media-breakpoint-down(desktop)
