--- a/assets/sass/cids-theme/styles/layout.sass
+++ b/assets/sass/cids-theme/styles/layout.sass
@@ -15,6 +15,11 @@ footer,
                 display: inline-block
                 margin-left: $spacing-1
 
+.document-content
+    .blocks
+        .block:first-child
+            margin-top: 0
+
 // hook : quote pattern before end -> only for js
 main > .quote-background
     display: none
