--- a/assets/sass/cids-theme/styles/toc.sass
+++ b/assets/sass/cids-theme/styles/toc.sass
@@ -77,7 +77,7 @@ body.offcanvas-toc
 
 .extended-summary
     @include media-breakpoint-up(desktop)
-        margin-top: $spacing-6
+        margin-top: $spacing-6 !important
         > .container
             position: relative
             display: flex
