--- a/assets/sass/cids-theme/styles/colors.sass
+++ b/assets/sass/cids-theme/styles/colors.sass
@@ -25,14 +25,15 @@ body
         .block-pages article:not(:hover) .more
             border: pxToRem(1) solid rgba(255,255,255, 0.4) !important
         
-        .block-pages--large .page
+        .block-pages--large .page::after
             background-color: $deep-blue-background-alt !important
         
         .block-pages--cards .page
             background-color: $deep-blue-background-alt
             &:hover
                 background-color: $color-electric-blue
-                p, a
+                .page-title a,
+                p
                     color: var(--color-text)
 
         .block-pages--cards .page,
@@ -40,12 +41,8 @@ body
             &:hover
                 .more
                     --btn-background: var(--color-text) !important
-                    --btn-color: var(--color-accent) !important
+                    --btn-color: #{$color-text} !important
                     --btn-border: 1px solid var(--color-text) !important
-        
-        .block-pages--large .page
-            @include media-breakpoint-down(desktop)
-                background-color: $deep-blue-background-alt
 
         .block-testimonials blockquote p
             color: var(--color-text)
