--- a/assets/sass/cids-theme/styles/blocks.sass
+++ b/assets/sass/cids-theme/styles/blocks.sass
@@ -86,10 +86,12 @@ body:not(.page__home)
             article
                 align-items: flex-start
                 .page-title
+                    @include h3
                     order: -2
                     margin-bottom: $spacing-1
-                    a::after
-                        display: none
+                    a
+                        @include stretched-link(before)
+                        text-decoration: none
                     + p
                         margin-top: $spacing-2
                 .more
@@ -160,10 +162,7 @@ body:not(.page__home)
                     margin-bottom: var(--grid-gutter)
                     &::after
                         display: none
-                &:hover
-                    .more
-                        border-color: $color-background
-                        text-decoration: none
+                
                 .media
                     order: 3
                     margin-bottom: 0
@@ -172,6 +171,13 @@ body:not(.page__home)
                         margin-top: auto
                         img
                             aspect-ratio: 426/282
+                
+                body:not(.page-dark_blue_background) &
+                    &:hover
+                        .more
+                            color: $color-background
+                            border-color: $color-background
+                            text-decoration: none
                 
                 @include media-breakpoint-down(desktop)
                     min-height: unset
