--- a/assets/sass/cids-theme/styles/home.sass
+++ b/assets/sass/cids-theme/styles/home.sass
@@ -35,8 +35,8 @@
         &.is-loaded .hero .hero-text h1
             opacity: 1
     
-        .block-summary
-            margin-top: var(--block-space-y) !important
+    .block-summary
+        margin-top: var(--block-space-y) !important
 
     .block-class-centered-title
         + .block-testimonials
@@ -60,11 +60,10 @@
     
     .block-pages--list.with-description
         border-bottom: 1px solid $color-border
-        padding-bottom: $spacing-6
+        padding-bottom: $spacing-4
         .block-content
             .block-title
                 @include h2
-                margin-bottom: $spacing-5 !important
                 a::after
                     display: none
                 
@@ -75,10 +74,16 @@
             @include media-breakpoint-up(desktop)
                 .pages > li + li
                     margin-top: 0 !important
+        
+        @include media-breakpoint-up(desktop)
+            margin-top: $spacing-5
+            .block-title
+                margin-bottom: $spacing-5 !important
     
     .block-chapter:not(.block-chapter--alt_background)
         @include media-breakpoint-up(desktop)
             padding-top: $spacing-2
+            padding-bottom: $spacing-6
             p
                 @include h2
                 font-size: $h2-size
